--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "clipboard-copy": "4.0.1",
     "clsx": "1.2.1",
     "crypto-js": "^4.1.1",
+    "csv-loader": "^3.0.5",
     "date-fns": "2.30.0",
     "dayjs": "^1.11.10",
     "dompurify": "^3.0.6",
