--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "install": "^0.13.0",
     "js-cookies": "^1.0.4",
     "jsonwebtoken": "8.5.1",
+    "jszip": "^3.10.1",
     "keen-slider": "6.8.5",
     "material-ui-dropzone": "^3.5.0",
     "mui-file-input": "^4.0.3",
@@ -109,6 +110,7 @@
     "eslint-import-resolver-alias": "1.1.2",
     "eslint-import-resolver-typescript": "3.5.3",
     "eslint-plugin-import": "2.27.5",
+    "file-loader": "^6.2.0",
     "prettier": "2.8.4"
   },
   "resolutions": {
